<!--
Copyright (C) 2021 Flipkart Internet Pvt Ltd
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
     http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:padding="4dp"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/play_pause_controller"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#80000000"
        android:visibility="gone">

        <ImageView
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/play_icon"
            android:padding="16dp"
            android:src="@drawable/video_play"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/pause_icon"
            android:padding="16dp"
            android:src="@drawable/video_pause"
            android:visibility="visible" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/time_left"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/ad_time_bg"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:layout_toEndOf="@id/time_left"
                android:layout_toRightOf="@id/time_left"
                android:background="@drawable/ad_time_bg"
                android:gravity="center_vertical"
                android:padding="12dp"
                android:text="Ad Starting Soon..."
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:visibility="gone" />
        </RelativeLayout>

        <SeekBar
            android:id="@+id/ad_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:clickable="false"
            android:enabled="false"
            android:focusable="false"
            android:padding="0dp"
            android:progressDrawable="@drawable/ad_seek_bar"
            android:thumb="@null"
            android:thumbTint="@android:color/transparent"
            android:visibility="gone" />
    </LinearLayout>

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back_arrow"
        android:padding="16dp"
        android:src="@drawable/video_back_icon" />

</FrameLayout>