<!--
Copyright (C) 2021 Flipkart Internet Pvt Ltd
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
     http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/rewind_shadow"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/shadow_round"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/forward_shadow"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/shadow_round"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/player_control_bottom_background"
        android:orientation="vertical"
        android:paddingTop="150dp">

        <include
            layout="@layout/player_seekbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include
            layout="@layout/player_settings_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@drawable/player_control_top_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="200dp">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back_arrow"
            android:padding="16dp"
            android:src="@drawable/video_back_icon" />

        <com.flipkart.flick.ui.views.RobotoMediumTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="#FFF"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/middle_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="0dp"
        android:gravity="center_horizontal|bottom"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/rewind_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="60dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/rewind_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/rewind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/rewind_desc"
                android:padding="16dp"
                android:visibility="invisible"
                app:srcCompat="@drawable/rewind_drawable" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom">

            <ImageView
                android:id="@+id/play_pause_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="10dp"
                android:alpha="0"
                android:contentDescription="@string/play_icon"
                android:visibility="invisible"
                app:srcCompat="@drawable/play_to_pause" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/forward_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingRight="60dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/forward_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="+500 seconds"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/forward_icon"
                android:padding="16dp"
                android:visibility="invisible"
                app:srcCompat="@drawable/forward_drawable" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>